# is31fl3743a-rs

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: build.yml  lint.yml
examples/: gaypride.rs  stm32.rs
examples/framework16-keyboard/: Cargo.toml  README.md  build.rs  firmware.uf2
examples/framework16-keyboard/.cargo/: config.toml
examples/framework16-keyboard/src/: main.rs
examples/framework16-macropad/: Cargo.toml
examples/framework16-macropad/examples/: macropad_ledtest.rs
examples/qt-py-rp2040/: Cargo.toml
examples/qt-py-rp2040/src/: main.rs
src/: devices.rs  lib.rs
