[package] 
name = "is31fl3743a"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Schaefer"]
categories = ["embedded", "no-std"]
description = "Driver for Lumissil Microsystem's IS31FL3743A IC"
license = "MIT"
repository = "https://github.com/FrameworkComputer/is31fl3743a-rs"
readme = "README.md"

[dependencies]
embedded-hal = "1.0"
embedded-graphics-core = { optional = true, version = "0.4.0" }

[package.metadata.docs.rs]
all-features = true

[features]
embedded_graphics = ["embedded-graphics-core"]
default = ["embedded_graphics"]
