[package] 
edition = "2021"
name = "is31fl3741-qt-py-rp2040"
version = "0.3.0"

[dependencies]
embedded-hal = "1.0"
embedded-graphics-core = { optional = true, version = "0.4.0" }

cortex-m-rt = "0.7.5"
cortex-m = "0.7.7"
panic-halt = "1.0.0"
rp-pico = "0.9.0"
adafruit-qt-py-rp2040 = {version = "0.8.0", features = ["rt"]}
tinybmp = "0.6.0"
embedded-graphics = "0.8.1"

is31fl3743a = { path = "../.." }
